[Mot] Faire bouger le Joueur avec son skin sur une map

--- a/EcoFallGuys/nbproject/project.properties
+++ b/EcoFallGuys/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=EcoFallGuys
-main.class=motor.EcoFallGuys
+main.class=motor.Eco_FallGuys
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
