--- a/EcoFallGuys/nbproject/project.properties
+++ b/EcoFallGuys/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=EcoFallGuys
+application.vendor=xlai
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,13 @@ dist.jar=${dist.dir}/EcoFallGuys.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/EcoFallGuys
+endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-6.0.4-bin.jar=lib/mysql-connector-java-6.0.4-bin.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-6.0.4-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,7 +52,8 @@ javac.source=18
 javac.target=18
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.mysql-connector-java-6.0.4-bin.jar}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
